# fastapi-lazyrouter

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
alfred/: ci.py  dist.py  docs.py  lint.py  publish.py  tests.py
docs/: api.rst  architecture.rst  conf.py  getting_started.rst  index.rst  usage.rst
src/fastapi_lazyrouter/: __init__.py  base.py  main.py
